[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mina-sdk"
version = "0.1.0"
description = "Python SDK for interacting with Mina Protocol nodes"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.8"
authors = [
    { name = "Mina Protocol", email = "engineering@minaprotocol.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
archive = ["asyncpg>=0.29"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.20",
    "ruff>=0.8",
]

[project.urls]
Homepage = "https://github.com/MinaProtocol/mina-sdk-python"
Repository = "https://github.com/MinaProtocol/mina-sdk-python"
Issues = "https://github.com/MinaProtocol/mina-sdk-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mina_sdk"]

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
